# mindRound

./: .gitignore  CLAUDE.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json
docs/: MVP功能清单.md  SKILL_PROTOCOL.md  plan.md  开发测试计划.md  详细设计.md
scripts/: stage-bundle-data.mjs
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json.bak
src-tauri/src/: lib.rs
src-tauri/src/commands/: chat.rs  config.rs  exec.rs  fetch.rs  fs.rs  mod.rs  paths.rs  persona.rs  platform.rs  search.rs
src-tauri/tests/fixtures/: bing.html  brave.html  ddg.html  ddg_lite.html  searxng.html
src-tauri/windows/: installer-hooks.nsh
src/core/agent/: Agent.test.ts  Agent.ts  ContextTrimmer.test.ts  ContextTrimmer.ts  PermissionService.test.ts  PermissionService.ts  ToolResultCache.test.ts  ToolResultCache.ts  index.ts  invoke.ts  types.ts
src/core/domain/: Chat.test.ts  Chat.ts  Memory.test.ts  Memory.ts  Message.test.ts  Message.ts  Persona.test.ts  Persona.ts  PersonaIndex.test.ts  PersonaIndex.ts  index.ts
src/core/repositories/: IApiRepository.ts  IChatRepository.ts  IConfigRepository.ts  IPersonaRepository.ts  index.ts
src/core/services/: ChatService.test.ts  ChatService.ts  ConfigService.ts  ContextBuilderService.test.ts  ContextBuilderService.ts  MemoryService.test.ts  MemoryService.ts  PersonaService.ts  index.ts  memoryConversation.ts
src/core/utils/: constants.ts  id.ts  index.ts  messageContent.test.ts  messageContent.ts  time.test.ts  time.ts
src/ui/components/: Avatar.tsx  ChatInput.test.tsx  (+11 more)
(+77 files in other folders)
