[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
include_dir = "0.7"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"

# Agent 网络 / 文件 / 命令执行所需依赖
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }
scraper = "0.20"
html2md = "0.2"
ignore = "0.4"
regex = "1.11"
sha2 = "0.10"
url = "2.5"
urlencoding = "2.1"
tokio = { version = "1", features = ["process", "time", "io-util", "rt-multi-thread", "macros"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
